# flutter_libserialport

./: .gitignore  .metadata  CMakeLists.txt  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/libserialport/: CMakeLists.txt
android/src/main/java/org/sigrok/flutter_libserialport/: FlutterLibserialportPlugin.java
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/org/sigrok/flutter_libserialport_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_libserialport.podspec
ios/Classes/: FlutterLibserialportPlugin.h  FlutterLibserialportPlugin.m  SwiftFlutterLibserialportPlugin.swift
lib/: flutter_libserialport.dart  flutter_libserialport_method_channel.dart  flutter_libserialport_platform_interface.dart
lib/src/: bindings.dart  config.dart  dylib.dart  libserialport.dart  port.dart  reader.dart  universal_serial.dart  util.dart
linux/libserialport/: CMakeLists.txt
test/: flutter_libserialport_method_channel_test.dart  flutter_libserialport_test.dart
windows/: CMakeLists.txt  flutter_libserialport_plugin.cpp  flutter_libserialport_plugin.h  flutter_libserialport_plugin_c_api.cpp
windows/include/flutter_libserialport/: flutter_libserialport_plugin_c_api.h
windows/libserialport/: CMakeLists.txt
